# ml-project

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  audit.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  verify_load.py
.github/workflows/: cd.yml  ci.yml  deploy_to_hf.yml
docker/: Dockerfile
docs/: code_explanation.md  project_report.md  project_report.tex  video_plan.md
models/AAPL/: classification_model.pkl  clustering_model.pkl  pca_model.pkl  regression_model.pkl
models/GOOGL/: classification_model.pkl  clustering_model.pkl  pca_model.pkl  regression_model.pkl
src/api/: main.py
src/ingestion/: ingest.py
src/orchestration/: flows.py  notifications.py  test_notification.py
src/processing/: eda.py  features.py  split.py
tests/: data_validation.py  test_components.py
