[project]
name = "stock-prediction-system"
version = "0.1.0"
description = "End-to-End Stock Market Prediction System with FastAPI, Prefect, and Docker"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "pandas",
    "numpy",
    "scikit-learn",
    "prefect",
    "deepchecks",
    "alpha_vantage",
    "python-dotenv",
    "pydantic",
    "python-multipart",
    "joblib",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
